# src/main/java/ai/summary/transactions/domain/transaction/TransactionService.java
@@ -1,10 +1,13 @@
 package ai.summary.transactions.domain.transaction;
 
 import ai.summary.transactions.domain.transaction.model.Transaction;
+import java.util.List;
 
 public interface TransactionService {
 
     Transaction getTransactionById(String id);
+
+    List<Transaction> getAllTransactions(int limit, int offset);
 
     Transaction createTransaction(Transaction transaction);
 
